--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alpha Chat Mobile Application</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+<meta property="og:title" content="Alpha Chat Mobile Application" />
+<meta property="og:description" content="Seamless communication for everyone." />
+<meta property="og:image" content="/vite.svg" />
+<meta property="og:url" content="https://example.com" />
+<meta name="twitter:card" content="summary_large_image" />
